<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorScreenBG">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_cross_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OTP_text_4"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack_1"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/asset"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/id_contactNumber_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OTP_text_5"
            android:gravity="center"
            android:textColor="@color/colorGray"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OTP_text_6"
            android:gravity="center"
            android:textColor="@color/colorGray"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorWhite"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/id_otp_1"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:inputType="number"
                        android:textColor="@color/colorBlack_1"
                        android:padding="10dp"
                        android:maxLength="1"
                        android:gravity="center"
                        android:background="@drawable/edittext_bottom_line"/>

                    <EditText
                        android:id="@+id/id_otp_2"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:inputType="number"
                        android:textColor="@color/colorBlack_1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/edittext_bottom_line"/>

                    <EditText
                        android:id="@+id/id_otp_3"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:inputType="number"
                        android:textColor="@color/colorBlack_1"
                        android:padding="10dp"
                        android:maxLength="1"
                        android:gravity="center"
                        android:background="@drawable/edittext_bottom_line"/>

                    <EditText
                        android:id="@+id/id_otp_4"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:inputType="number"
                        android:textColor="@color/colorBlack_1"
                        android:padding="10dp"
                        android:maxLength="1"
                        android:gravity="center"
                        android:background="@drawable/edittext_bottom_line"/>

                    <EditText
                        android:id="@+id/id_otp_5"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:inputType="number"
                        android:textColor="@color/colorBlack_1"
                        android:padding="10dp"
                        android:maxLength="1"
                        android:gravity="center"
                        android:background="@drawable/edittext_bottom_line"/>

                    <EditText
                        android:id="@+id/id_otp_6"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:inputType="number"
                        android:textColor="@color/colorBlack_1"
                        android:padding="10dp"
                        android:maxLength="1"
                        android:gravity="center"
                        android:background="@drawable/edittext_bottom_line"/>

                </LinearLayout>



                <Button
                    android:id="@+id/id_sendOTP_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/OTP_text_3"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_corner"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="30dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OTP_text_7"
            android:gravity="center"
            android:textColor="@color/colorGray"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_resend"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_call"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>

    </LinearLayout>





</LinearLayout>